pkl-core/src/test/files/LanguageSnippetTests/input/errors/spreadSyntaxCannotIterateOverTyped.pkl
class Person {
  name: String
}

person: Person = new { name = "Bob" }

result {
  ...person
}
